<resources>

    <!-- COMMON -->
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="done_button">Done</string>
    <string name="rename_button">Rename</string>
    <string name="prompt_create_new">Create new…</string>

    <!-- MENU -->
    <string name="action_settings">Settings</string>
    <string name="action_create">Create</string>
    <string name="action_delete">Delete</string>
    <string name="action_active_toggle">Enable/Disable</string>
    <string name="action_edit">Edit</string>

    <!-- MAIN -->
    <string name="tab_setlists">SetLists</string>
    <string name="tab_all_songs">All</string>
    <string name="search">Search</string>

    <!-- CREATE PROMPT -->
    <string name="placeholder_title">Title</string>
    <string name="placeholder_bpm">BPM</string>
    <string name="placeholder_bar_upper">Upper bar</string>
    <string name="placeholder_bar_lower">Lower bar</string>
    <string name="choose_pdf">Select a pdf file</string>
    <string name="submit">Create</string>
    <string name="select_pdf_title">Select PDF</string>
    <string name="other">Other</string>
    <string name="fill_fields">Please, fill all the fields</string>

    <!-- MARKER DIALOG -->
    <string name="create_marker_title">Create Marker</string>
    <string name="edit_marker_title">Edit Marker</string>
    <string name="placeholder_bar">Bar</string>
    <string name="placeholder_beat">Beat</string>
    <string name="placeholder_note">Note</string>
    <string name="showtext_none">Don\'t show text</string>
    <string name="showtext_above">Show text above marker</string>
    <string name="showtext_below">Show text below marker</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="select_text_size">Select text size</string>
    <string name="marker_notify">Notify marker</string>
    <string name="marker_show_always">Show always</string>
    <string name="marker_print_on_canvas">Print over sheet</string>
    <string name="marker_type_marker">Marker</string>
    <string name="marker_type_note">Note</string>

    <!-- SETLIST DIALOG -->
    <string name="create_setlist_title">Create SetList</string>
    <string name="rename_setlist_title">Rename SetList</string>
    <string name="rename_prompt_title">Rename Prompt</string>


    <!-- SET LISTS -->
    <string name="first_set_list_title">Set List 1</string>

    <!-- PROMPT ACTIVITY -->
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="cant_create_marker">Cannot create marker</string>
    <string name="must_click_marker">Before you create marker you must click the location in the prompt</string>
    <string name="click_marker_please">Please click where you want to add a marker</string>
    <string name="markers_list">Markers</string>
    <string name="prompt_beat_number">Beat: %1$d</string>
    <string name="prompt_bar_number">Bar: %1$d</string>


    <!-- ACTIVITY TITLES -->
    <string name="title_activity_prompt">PlayActivity</string>

    <!-- ARE YOU SURE -->
    <string name="areyousure_dialog_title">Are you sure?</string>
    <string name="areyousure_dialog_ok">Yes</string>
    <string name="areyousure_dialog_no">No</string>


    <!-- GLOBAL APP -->
    <string name="app_name">Auto BPM Prompt</string>
    <string name="loading">Loading…</string>
    <string name="field_required">This field is required</string>

    <!-- MENU -->
    <string name="rename_setlist_menu">Rename setlist</string>
    <string name="delete_setlist_menu">Delete setlist</string>

    <string name="rename_prompt_menu">Rename prompt</string>
    <string name="delete_prompt_menu">Delete prompt</string>

    <!-- PREFERENCES -->
    <string name="prf_grp_sheet">Sheet</string>
    <string name="prf_sheet_orientation">Sheet orienation</string>
    <string name="prf_sheet_orientation_summary">Defines the orientation of the page scrolling</string>
    <string name="prf_sheet_orientation_horizontal">Horizontal</string>
    <string name="prf_sheet_orientation_vertical">Vertical</string>
    <string name="prf_sheet_init_view_mode">Initialize in view mode</string>
    <string name="prf_sheet_init_view_mode_summary">Enable if you want the view mode as the default mode</string>

    <string name="prf_grp_display">Display</string>
    <string name="prf_display_show_pager">Show pager</string>
    <string name="prf_display_show_pager_summary">Enable for showing pager navigation buttons</string>
    <string name="prf_display_show_markers">Show markers</string>
    <string name="prf_display_show_markers_summary">Enable if you want to see the markers in the prompt</string>

    <!-- PREFERENECS NAMES -->
    <string name="preference_orientation">prf_orientation</string>
    <string name="preference_show_pager">prf_show_pager</string>
    <string name="preference_initial_mode_view">prf_initial_mode</string>

</resources>
