<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/prf_grp_sheet">
        <ListPreference
            android:defaultValue="@string/prf_sheet_orientation_vertical"
            android:entries="@array/prf_orientation_values"
            android:entryValues="@array/prf_orientation_values"
            android:key="@string/preference_orientation"
            android:summary="@string/prf_sheet_orientation_summary"
            android:title="@string/prf_sheet_orientation" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/preference_initial_mode_view"
            android:summary="@string/prf_sheet_init_view_mode_summary"
            android:title="@string/prf_sheet_init_view_mode" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/prf_grp_display">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_show_pager"
            android:summary="@string/prf_display_show_pager_summary"
            android:title="@string/prf_display_show_pager" />
    </PreferenceCategory>
</PreferenceScreen>
