<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/prompt_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/prompt_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/prompt_bpm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/prompt_bpm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_bpm"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/prompt_upper_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/prompt_upper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_bar_upper"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/prompt_lower_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/prompt_lower"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_bar_lower"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>