<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".app.controller.CreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/create_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/create_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_title" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/create_bpm_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/create_bpm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/placeholder_bpm"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onTapClick"
                    android:text="Tap" />

            </LinearLayout>


            <RadioGroup
                android:id="@+id/create_tempo_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/create_tempo_44"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:checked="true"
                    android:drawableEnd="@drawable/bar_44" />

                <RadioButton
                    android:id="@+id/create_tempo_34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableEnd="@drawable/bar_34" />

                <RadioButton
                    android:id="@+id/create_tempo_68"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawableEnd="@drawable/bar_68" />

                <RadioButton
                    android:id="@+id/create_tempo_other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/other" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/create_tempo_other_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/create_bar_upper_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/create_bar_upper"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/placeholder_bar_upper"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/create_bar_lower_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/create_bar_lower"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/placeholder_bar_lower"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <Button
                android:id="@+id/create_selectPdf"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_pdf"
                android:onClick="loadPDFClick" />


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/create_prompt_pdf_preview_height"
                android:layout_gravity="center_horizontal">

                <!-- pdf preview -->
                <com.github.barteksc.pdfviewer.PDFView
                    android:id="@+id/create_pdfpreview"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <Button
                android:id="@+id/create_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/submit"
                android:onClick="createPromptClick" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
