<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.a2t.autobpmprompt.app.controller.PromptActivity">


    <LinearLayout
        android:id="@+id/contents_fullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_marginTop="@dimen/activity_prompt_top_bar"
            android:layout_width="@dimen/activity_prompt_markers_bar"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/prompt_markers"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:cacheColorHint="#00000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/activity_prompt_top_bar"
                android:background="@android:color/transparent"
                android:cacheColorHint="#00000000"
                android:orientation="horizontal">

                <!--<Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KE ASE aaaa" />-->

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.joanzapata.pdfview.PDFView
                    android:id="@+id/pdfview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <SurfaceView
                    android:id="@+id/prompt_floating_canvas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>


        </LinearLayout>
    </LinearLayout>

    <!-- This FramLinearLayoutts its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:id="@+id/frame_content_controls"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/activity_prompt_top_bar">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_prompt_play"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_button"
                android:onClick="promptPlay"/>

            <Button
                android:id="@+id/button_prompt_pause"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pause_button"
                android:onClick="promptPause"/>

            <Button
                android:id="@+id/button_prompt_stop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_button"
                android:onClick="promptStop"/>

            <Button
                android:id="@+id/button_prompt_save"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:onClick="promptSave"/>

        </LinearLayout>
    </FrameLayout>
</FrameLayout>
